syntax = "proto3";

package peers_touch.touch.v1.actor;

option go_package = "github.com/peers-touch/peers-touch/proto/gen/touch/v1/actor;actorv1";

import "touch/v1/types.proto";

// Actor basic information
message Actor {
  string id = 1;                          // Unique identifier
  string type = 2;                        // Actor type (Person, Service, Group, etc.)
  string preferred_username = 3;          // Actor's preferred username
  string name = 4;                        // Actor's display name
  string summary = 5;                      // Brief description of the actor
  string icon = 6;                        // Actor's avatar/profile picture URL
  string image = 7;                       // Actor's header/banner image URL
  string inbox = 8;                        // Actor's inbox endpoint
  string outbox = 9;                       // Actor's outbox endpoint
  string followers = 10;                   // Actor's followers collection endpoint
  string following = 11;                   // Actor's following collection endpoint
  string liked = 12;                       // Actor's liked collection endpoint
  string public_key = 13;                  // Public key for HTTP signatures
  string created_at = 14;                  // Actor creation time
  string updated_at = 15;                  // Actor last update time
}

// Actor registration parameters
message ActorSignUpParams {
  string name = 1;                        // Actor name
  string email = 2;                       // Actor email
  string password = 3;                     // Actor password
  string passport = 4;                     // Actor passport
}

// Actor login parameters
message ActorLoginParams {
  string email = 1;                       // Actor email
  string password = 2;                     // Actor password
}

// Actor authentication response
message ActorAuthResponse {
  Actor actor = 1;                        // Actor information
  string token = 2;                       // Authentication token
  string expires_at = 3;                  // Token expiration time
}

// Actor service definition
service ActorService {
  // Register actor
  rpc SignUp(ActorSignUpParams) returns (ActorAuthResponse);
  
  // Login actor
  rpc Login(ActorLoginParams) returns (ActorAuthResponse);
  
  // Get current actor information
  rpc GetCurrentActor(touch.v1.Empty) returns (Actor);
}